# merge_config_files

./: Cargo.toml  README.md
example/: Cargo.toml
example/config/: base.toml  override.toml
example/src/: main.rs
src/: error.rs  lib.rs
