[package]
name = "merge_config_files"
version = "0.1.3"
edition = "2021"
authors = ["MoghTech"]
description = "tools to merge config from multiple files / directories. supports json and toml"
repository = "https://github.com/mbecker20/merge_config_files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.7"