[workspace]
resolver = "2"
members = [".", "example"]

[package]
name = "merge_config_files"
version = "1.0.1"
edition = "2021"
authors = ["mbecker20"]
description = "tools to merge config from multiple files / directories. supports json and toml"
repository = "https://github.com/mbecker20/merge_config_files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.9"
wildcard = "0.3"